--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "husky",
     "precommit": "lint-staged",
     "dev": "nodemon Server.js",
-    "start": "node Server.js",
+    "start": "nodemon Server.js",
     "build": "echo 'No build step yet'"
   },
   "lint-staged": {
@@ -31,10 +31,15 @@
   },
   "homepage": "https://github.com/Princy-Patel-30/final-backend#readme",
   "dependencies": {
+    "@prisma/client": "^6.8.2",
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.27.0",
@@ -44,6 +49,8 @@
     "globals": "^16.2.0",
     "husky": "^9.1.7",
     "lint-staged": "^15.5.2",
-    "prettier": "^3.5.3"
+    "nodemon": "^3.1.10",
+    "prettier": "^3.5.3",
+    "prisma": "^6.8.2"
   }
 }
