feat[cloudinary setup + fix[controller logic for authentication]]

--- a/.env.example
+++ b/.env.example
@@ -18,6 +18,9 @@ EMAIL_USER=example@gmail.com          # Your SMTP email address
 EMAIL_PASS=APP_PASSOWORD            # App password or SMTP password
 EMAIL_FROM=SocioFeed<your-email@gmail.com> # From field in email headers
 
+CLOUDINARY_NAME =
+CLOUDINARY_API_KEY= 
+CLOUDINARY_API_SECRET=
 
 CLIENT_URL=http://localhost:5173         # Frontend URL
 BASE_URL=http://localhost:3000           # API base URL
