--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.0",
     "nodemailer": "^7.0.3",
+    "socket.io": "^4.8.1",
     "streamifier": "^0.1.1"
   },
   "devDependencies": {
